--- a/style.css
+++ b/style.css
@@ -12,13 +12,18 @@ html {
 }
 
 body {
-  background-color: hsl(210, 46%, 95%);
+    background-color: hsl(210, 46%, 95%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #testimonial-grid-container {
   display: flex;
   flex-direction: column;
   padding: 5% 3%;
+  max-width: 375px;
 }
 
 #testimonial-1 {
